[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/UI/Menu/main_menu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.137255, 0.156863, 0.294118, 1 )

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -35.5
margin_top = -46.0
margin_right = 35.5
margin_bottom = 46.0

[node name="StartButton" type="Button" parent="Buttons"]
margin_right = 71.0
margin_bottom = 20.0
text = "START"

[node name="OptionsButton" type="Button" parent="Buttons"]
margin_top = 24.0
margin_right = 71.0
margin_bottom = 44.0
text = "OPTIONS"

[node name="CreditsButton" type="Button" parent="Buttons"]
margin_top = 48.0
margin_right = 71.0
margin_bottom = 68.0
text = "CREDITS"

[node name="QuitButton" type="Button" parent="Buttons"]
margin_top = 72.0
margin_right = 71.0
margin_bottom = 92.0
text = "QUIT"

[connection signal="pressed" from="Buttons/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Buttons/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Buttons/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
